--- a/contact.css
+++ b/contact.css
@@ -47,7 +47,7 @@ div.contatos{
     color: #fcf9d8;}
 nav{
     background-color:#edebc9;
-    width: auto;
+    width: 100%;
     height:15vh;
     display: flex;
     justify-content: space-between;
